Created and learned css modules

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-.app-wrapper {
-  /* text-align: center; */
+.appWrapper {
   display: grid;
   grid-template-areas: 
   "header header"
@@ -7,22 +6,6 @@
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   /* grid-gap: 10px; */
-
-}
-
-.header{
-  grid-area: header;
-  background-color: brown;
-  /* max-height: auto; */
 }
 
 
-.navbar{
-  grid-area: navbar;
-  background-color: darkblue;
-}
-
-.content{
-  grid-area: content;
-  background-color: chartreuse;
-}
