Create Navlink into Navbar component, add className and property css

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,12 +1,15 @@
 .navbar {
   grid-area: navbar;
   background-color: darkblue;
+  padding: 15px 20px;
 }
 
-.item a{
-  color: white
+.item {
+  color: white;
+  text-decoration-line: none;
 }
 
 .active {
   color: gold;
+  text-decoration-line: none;
 }
