Added avatars for message page and indicator messages

--- a/src/components/Messages/DialogUser/DialogUser.module.css
+++ b/src/components/Messages/DialogUser/DialogUser.module.css
@@ -1,10 +1,27 @@
 .dialogItem {
-    color: daпrkblue;
+    display: flex;
+    flex-direction: row;
+    color: darkblue;
     text-decoration-line: none;
     padding-bottom: 5px;
+    align-items: center;
 }
 
 .activeDialogItem {
+    display: flex;
     color: rgba(230, 42, 28, 0.616);
     text-decoration-line: none;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+.dialogItem img {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: white;
+}
+
+.dialogItem span{
+    padding-left: 5px;
 }
