--- a/src/components/Messages/UserMessage/UserMessage.module.css
+++ b/src/components/Messages/UserMessage/UserMessage.module.css
@@ -1,3 +1,25 @@
-.messageItem {
-    padding-bottom: 5px;
+
+.messageItem{
+    display: flex;
+    padding-top: 10px;
+    height: 50px;
+    align-items: center;
+}
+
+.messageItem:first-child {
+    padding-top: 1px;
+    height: 50px;
+}
+
+.circle{
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background: red;
+}
+.currentCircle{
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background: green;
 }
